--- a/k8s/metrics-server.yaml
+++ b/k8s/metrics-server.yaml
@@ -1,3 +1,11 @@
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: high-priority
+value: 1000000000
+preemptionPolicy: Never
+globalDefault: false
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
